# Ray

./: .gitignore  CMakeLists.txt  Filter.hxx  Frame.hxx  Infrastructure.hxx  README.md  README_Ray1.md  Ray.hxx  Signature.txt  feedback.txt  glm_fix.hxx  main.cpp  refract_whitted.xml  setting.qrc  test1.xml  test2.xml
configs/: main.ini
docs/ray_1/: README.md  algo.md
docs/ray_2/: README.md  Untitled.ipynb  algo.md
raytracer/: RayTracer.hxx
utils/: RGBA.h  SceneData.h  SceneParser.cpp  SceneParser.h  ScenefileReader.cpp  ScenefileReader.h
